--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Riddle - Portfolio Template</title>
+	<title>Martin Pålsson</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Riddle - Portfolio Template">
+	<meta name="description" content="Martin Pålsson">
 	<meta name="keywords" content="portfolio, riddle, onepage, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
@@ -37,11 +37,11 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-3">
 					<div class="logo">
-						<h2 class="site-logo">Riddle</h2>
+						<h2 class="site-logo">Martin Pålsson</h2>
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-9">
-					<a href="" class="site-btn header-btn">Get in touch</a>
+					<a href="" class="site-btn header-btn">Hello.</a>
 					<nav class="main-menu">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -64,7 +64,7 @@
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-xl-10 offset-xl-1">
-					<h2 class="section-title">I’m a freelance <span>digital designer</span>, with +10 years of experience</h2>
+					<h2 class="section-title"><span>//</span> Martin Pålsson <span>//</span></h2>
 				</div>
 			</div>
 		</div>
@@ -150,8 +150,8 @@
 	<!-- footer section start -->
 	<footer class="footer-section text-center">
 		<div class="container">
-			<h2 class="section-title mb-5">Let’s work together</h2>
-			<a href="" class="site-btn">Get in touch</a>
+			<h2 class="section-title mb-5">Say.</h2>
+			<a href="" class="site-btn">Hello.</a>
 			<div class="social-links">
 				<a href=""><span class="fa fa-pinterest"></span></a>
 				<a href=""><span class="fa fa-linkedin"></span></a>
