--- a/home-2.html
+++ b/home-2.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Riddle - Portfolio Template</title>
+	<title>Martin Pålsson</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Riddle - Portfolio Template">
+	<meta name="description" content="Martin Pålsson">
 	<meta name="keywords" content="portfolio, riddle, onepage, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+	<link href="images/favicon.png" rel="shortcut icon" type="image/png"/>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i,700" rel="stylesheet">
@@ -36,7 +36,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="logo">
-					<h2 class="site-logo">Riddle</h2>
+					<h2 class="site-logo">Martin Pålsson</h2>
 				</div>
 				<div class="home-2 container text-left text-md-right">
 					<nav class="main-menu">
@@ -48,7 +48,7 @@
 						</ul>
 					</nav>
 				</div>
-				<a href="" class="site-btn header-btn">Get in touch</a>
+				<a href="" class="site-btn header-btn">Hello.</a>
 			</div>
 		</div>
 		<div class="nav-switch">
@@ -67,7 +67,7 @@
 			<div class="row portfolios-area">
 				<div class="col-lg-6">
 					<div class="portfolio-intro">
-						<h2 class="section-title mb-5">I’m a freelance <span>digital designer</span>, with +10 years of experience</h2>
+						<h2 class="section-title mb-5"><span>//</span> Martin Pålsson <span>//</span></h2>
 						<ul class="portfolio-filter controls">
 							<li class="control" data-filter="all">All</li>
 							<li class="control" data-filter=".web">Web design</li>
@@ -198,8 +198,8 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-8">
-					<h2 class="section-title mb-5">Let’s work together</h2>
-					<a href="" class="site-btn">Get in touch</a>
+					<h2 class="section-title mb-5">Say.</h2>
+					<a href="" class="site-btn">Hello.</a>
 				</div>
 				<div class="col-md-4 text-md-right">
 					<div class="social-links">
